--- a/org.eclipse.rcpl.core/src/css/default.css
+++ b/org.eclipse.rcpl.core/src/css/default.css
@@ -689,10 +689,8 @@
 	-fx-font-size: 8;
 }
 
-#joffice_title_version {
-	-fx-font: normal 10pt "Arial";
-	-fx-effect: dropshadow(three-pass-box, rgba(255, 255, 255, 0.6), 0, 0.0,
-		0, 1);
+#title_version {
+	-fx-font-size: 11.0pt;
 }
 
 #joffice_version {
@@ -1140,7 +1138,7 @@
 
 
 .emfTreeView {
-   -fx-font: 9pt "Segoe UI";
+   -fx-font: 10pt "Segoe UI";
    -fx-stroke: #eeeeee;
    -fx-background-color: #0a0a0a;
    -fx-text-fill: #ffffff;
