--- a/org.eclipse.rcpl.core/src/org/eclipse/rcpl/ui/controler/rcpl_uic.fxml
+++ b/org.eclipse.rcpl.core/src/org/eclipse/rcpl/ui/controler/rcpl_uic.fxml
@@ -41,7 +41,7 @@
              <Insets top="0.0" />
           </padding>
         </HBox>
-            <StackPane fx:id="logoutButtonArea" prefHeight="32.0" prefWidth="32.0" />
+            <StackPane fx:id="logoutButtonArea" alignment="BOTTOM_LEFT" prefHeight="32.0" prefWidth="32.0" VBox.vgrow="NEVER" />
       </children>
       <BorderPane.margin>
         <Insets fx:id="x3" />
