--- a/org.eclipse.rcpl.core/src/org/eclipse/rcpl/ui/controls/spreadsheet.css
+++ b/org.eclipse.rcpl.core/src/org/eclipse/rcpl/ui/controls/spreadsheet.css
@@ -91,7 +91,7 @@
 
 /* PICKERS */
 .picker-label{
-    -fx-graphic: url("information.png"); 
+    -fx-graphic: url("info.png"); 
     -fx-background-color: white;
     -fx-padding: 0 0 0 0;
     -fx-alignment: center;
@@ -105,7 +105,7 @@
 }
 
 .picker-label-security{
-    -fx-graphic: url("security-low.png"); 
+    -fx-graphic: url("warning.gif"); 
     -fx-background-color: transparent;
     -fx-padding: 0 0 0 0;
     -fx-alignment: center;
