--- a/org.eclipse.rcpl.core/src/css/default.css
+++ b/org.eclipse.rcpl.core/src/css/default.css
@@ -1173,6 +1173,20 @@
 	-fx-border-width: 1;
 }
 
+
+#whiteBorder{
+	-fx-border-style: solid;
+	-fx-border-color: white;
+	-fx-border-width: 1;
+}
+
+
+#yellowBorder{
+	-fx-border-style: solid;
+	-fx-border-color: yellow;
+	-fx-border-width: 1;
+}
+
 #transparentBorder{
 	-fx-border-style: solid;
 	-fx-border-color: transparent;
