--- a/org.eclipse.rcpl.core/src/css/default.css
+++ b/org.eclipse.rcpl.core/src/css/default.css
@@ -1187,6 +1187,15 @@
 	-fx-border-width: 1;
 }
 
+#insetBorder{
+	-fx-border-style: solid;
+	-fx-border-color: gray;
+	-fx-border-width: 2;
+    -fx-border-insets: 2;
+}
+
+
+
 #transparentBorder{
 	-fx-border-style: solid;
 	-fx-border-color: transparent;
