--- a/org.eclipse.rcpl.core/src/org/eclipse/rcpl/ui/controls/spreadsheet.css
+++ b/org.eclipse.rcpl.core/src/org/eclipse/rcpl/ui/controls/spreadsheet.css
@@ -32,12 +32,15 @@
     -fx-background-color: #8cb1ff;
     -fx-text-fill: -fx-selection-bar-text;
 }
+
+
 .spreadsheet-cell.compagny:hover,
 .spreadsheet-cell.compagny:filled:focused {
-    -fx-background-color: #988490;
+    -fx-background-color: silver; /* #988490; */
     -fx-text-fill: -fx-text-inner-color;
     -fx-background-insets: 0, 0 0 1 0;
 }
+
 
 .spreadsheet-cell.compagny{
     -fx-background-color: -fx-table-cell-border-color, #ABC8E2;
@@ -78,7 +81,30 @@
     -fx-background-insets: 0, 0 1 1 0;
 }
 
-/* CELL SPANNING 
+
+/* CELL EVERY 5 ROW */
+
+
+/*
+.spreadsheet-cell.empty_cell:filled:selected ,
+.spreadsheet-cell.empty_cell:filled:focused:selected,
+.spreadsheet-cell.empty_cell:filled:focused:selected:hover {
+    -fx-background-color: #8cb1ff ;
+    -fx-text-fill: -fx-selection-bar-text;
+}
+.spreadsheet-cell.empty_cell:hover,
+.spreadsheet-cell.empty_cell:filled:focused {
+    -fx-background-color: #988490;
+    -fx-text-fill: -fx-text-inner-color;
+    -fx-background-insets: 0, 0 0 1 0;
+}
+*/
+.spreadsheet-cell.empty_cell{
+    -fx-background-color: ghostwhite;
+}
+
+
+/* CELL SPANNING */
 .spreadsheet-cell.span{
     -fx-border-color : #3B0405;
     -fx-border-width : 1;
@@ -87,7 +113,7 @@
 .spreadsheet-cell.span:selected{
     -fx-alignment: center;
 }
-*/
+
 
 /* PICKERS */
 .picker-label{
