--- a/org.eclipse.rcpl.core/src/org/eclipse/rcpl/ui/controls/spreadsheet.css
+++ b/org.eclipse.rcpl.core/src/org/eclipse/rcpl/ui/controls/spreadsheet.css
@@ -100,7 +100,7 @@
 }
 */
 .spreadsheet-cell.empty_cell{
-    -fx-background-color: ghostwhite;
+    -fx-background-color: silver; /*ghostwhite;*/
 }
 
 
