--- a/org.eclipse.rcpl.core/src/css/default.css
+++ b/org.eclipse.rcpl.core/src/css/default.css
@@ -1238,3 +1238,7 @@
     -fx-fill: lightcoral;
 }
 
+.progressview-cell-empty {
+	-fx-background-color: transparent;
+    -fx-border-color: transparent;
+}
