--- a/org.eclipse.rcpl.core/src/css/default.css
+++ b/org.eclipse.rcpl.core/src/css/default.css
@@ -1242,3 +1242,18 @@
 	-fx-background-color: transparent;
     -fx-border-color: transparent;
 }
+
+.context-menu {
+  -fx-background-color: derive(-fx-base, -90.0%);
+  -fx-text-fill: white;
+}
+
+.menu-item .label {
+  -fx-text-fill: white;
+  -fx-font: 12pt "Segoe UI";
+}
+
+.menu-item:focused .label {
+  -fx-text-fill: white;
+  -fx-font: 12pt "Segoe UI";
+}
