--- a/org.eclipse.rcpl.core/src/org/eclipse/rcpl/ui/controler/rcpl_uic.fxml
+++ b/org.eclipse.rcpl.core/src/org/eclipse/rcpl/ui/controler/rcpl_uic.fxml
@@ -31,7 +31,7 @@
             <StackPane fx:id="progressArea" prefWidth="100.0" HBox.hgrow="ALWAYS" />
             <HBox fx:id="editorWindowTools" minWidth="-Infinity" prefWidth="400.0" spacing="3.0">
                <children>
-                  <ColorPicker fx:id="themeColorPicker" onAction="#handleThemeColorPicker" />
+                  <ColorPicker fx:id="themeColorPicker" minWidth="120.0" onAction="#handleThemeColorPicker" />
                   <ToggleButton id="sliderButton" fx:id="themeDefaultButton" mnemonicParsing="false" onAction="#handleThemeDefault" />
                   <ToggleButton id="sliderButton" fx:id="themeSilverButton" mnemonicParsing="false" onAction="#handleThemeSilver" />
                   <ToggleButton id="sliderButton" fx:id="themeDarkButton" mnemonicParsing="false" onAction="#handleThemeDark" />
@@ -88,83 +88,73 @@
          </padding>
     </VBox>
   </left>
-  <right>
-    <HBox fx:id="mainRightArea" prefHeight="-1.0" prefWidth="2.0">
-      <padding>
-        <Insets fx:id="x2" />
-      </padding>
-      <BorderPane.margin>
-        <Insets fx:id="x2" />
-      </BorderPane.margin>
-    </HBox>
-  </right>
 <padding>
 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
 </padding>
-<top><StackPane prefHeight="23.0" prefWidth="200.0">
+   <top>
+<HBox fx:id="mainTopArea" maxWidth="5000.0" minWidth="10.0" prefHeight="61.0" prefWidth="10000.0" BorderPane.alignment="CENTER">
 <children>
-    <HBox fx:id="mainTopArea" maxWidth="5000.0" minWidth="10.0" prefHeight="31.0" prefWidth="10000.0" BorderPane.alignment="TOP_LEFT">
-      <children><Button fx:id="startMenuButton" mnemonicParsing="false" HBox.hgrow="NEVER">
-<VBox.margin>
-<Insets top="10.0" />
-</VBox.margin></Button>
-                  <VBox fx:id="topVBox" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+            <VBox alignment="TOP_CENTER" spacing="5.0">
+               <children>
+                  <Button fx:id="startMenuButton" mnemonicParsing="false">
+      <VBox.margin>
+      <Insets />
+      </VBox.margin>
+                  </Button>
+                  <ToggleButton id="topToolbarCollapseButton" fx:id="topBarCollapseButton" alignment="CENTER_RIGHT" maxHeight="64.0" maxWidth="16.0" minHeight="20.0" minWidth="16.0" mnemonicParsing="false" onAction="#handleTopBarCollapseButton" prefHeight="64.0" prefWidth="16.0">
+                     <font>
+                        <Font size="5.0" />
+                     </font>
+                     <padding>
+                        <Insets top="10.0" />
+                     </padding>
+                  </ToggleButton>
+               </children>
+            </VBox>
+            <VBox fx:id="topVBox" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <HBox fx:id="collapseQuickTitleArea" maxHeight="-Infinity" minHeight="20.0" prefWidth="200.0" spacing="3.0">
                      <children>
-                        <HBox fx:id="collapseQuickTitleArea" maxHeight="-Infinity" minHeight="20.0" prefWidth="200.0" spacing="3.0">
-                           <children>
-                              <HBox fx:id="quickToolsArea" prefWidth="100.0">
-                                 <HBox.margin>
-                                    <Insets left="5.0" />
-                                 </HBox.margin></HBox>
-                              <HBox fx:id="titleArea" prefWidth="200.0" HBox.hgrow="ALWAYS">
-                                 <HBox.margin>
-                                    <Insets left="5.0" />
-                                 </HBox.margin></HBox>
-                           </children>
-                           <VBox.margin>
+                        <HBox fx:id="quickToolsArea" prefWidth="100.0">
+                           <HBox.margin>
                               <Insets left="5.0" />
-                           </VBox.margin>
+                           </HBox.margin>
                         </HBox>
-            <HBox fx:id="topArea" alignment="BOTTOM_LEFT" maxHeight="-1.0" minHeight="-1.0" prefWidth="10.0">
-              <children>
-                              <HBox alignment="CENTER_RIGHT" prefWidth="10.0" HBox.hgrow="NEVER">
-                                 <children>
-                                    <ToggleButton id="topToolbarCollapseButton" fx:id="topBarCollapseButton" alignment="CENTER_RIGHT" maxHeight="64.0" maxWidth="16.0" minHeight="20.0" minWidth="16.0" mnemonicParsing="false" onAction="#handleTopBarCollapseButton" prefHeight="64.0" prefWidth="16.0">
-                                       <font>
-                                          <Font size="5.0" />
-                                       </font>
-                                       <padding>
-                                          <Insets top="10.0" />
-                                       </padding>
-                                    </ToggleButton>
-                                 </children>
-                                 <padding>
-                                    <Insets right="5.0" />
-                                 </padding>
-                                 <HBox.margin>
-                                    <Insets left="10.0" />
-                                 </HBox.margin>
-                              </HBox>
-                  <StackPane id="transparentBorder" fx:id="mainTopStack" alignment="TOP_LEFT" maxHeight="-1.0" minWidth="-1.0" HBox.hgrow="NEVER">
-                    <padding>
-                      <Insets fx:id="x2" />
-                    </padding>
-                  </StackPane>
-                              <VBox id="transparentBorder" fx:id="tabPaneContainer" alignment="BOTTOM_LEFT" minWidth="100.0" prefHeight="1000.0" HBox.hgrow="SOMETIMES">
-                                 <children>
-                      <TabPane fx:id="tabPane" maxHeight="26.0" minHeight="26.0" prefHeight="26.0" tabClosingPolicy="ALL_TABS" tabMaxHeight="20.0" tabMinHeight="20.0" tabMinWidth="20.0">
-                 </TabPane>
-                                 </children>
-                              </VBox>
-              </children>
-            </HBox>
+                        <HBox fx:id="titleArea" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                           <HBox.margin>
+                              <Insets left="5.0" />
+                           </HBox.margin>
+                        </HBox>
                      </children>
-                  </VBox>
-      </children>
+                     <VBox.margin>
+                        <Insets left="5.0" />
+                     </VBox.margin>
+                  </HBox>
+      <HBox fx:id="topArea" alignment="BOTTOM_LEFT" maxHeight="-1.0" minHeight="-1.0" prefWidth="10.0">
+        <children>
+                        <HBox alignment="CENTER_RIGHT" prefWidth="10.0" HBox.hgrow="NEVER">
+                           <padding>
+                              <Insets right="5.0" />
+                           </padding>
+                           <HBox.margin>
+                              <Insets left="10.0" />
+                           </HBox.margin>
+                        </HBox>
+            <StackPane id="transparentBorder" fx:id="mainTopStack" alignment="TOP_LEFT" maxHeight="-1.0" minWidth="-1.0" HBox.hgrow="NEVER">
+              <padding>
+                <Insets fx:id="x2" />
+              </padding>
+            </StackPane>
+        </children>
+      </HBox>
+    <TabPane fx:id="tabPane" maxHeight="30.0" minHeight="-Infinity" minWidth="30.0" prefHeight="30.0" tabMaxHeight="20.0" tabMinHeight="20.0" tabMinWidth="20.0">
+                 </TabPane>
+               </children>
+            </VBox>
+</children>
 <BorderPane.margin>
 <Insets right="120.0" />
 </BorderPane.margin>
-    </HBox>
-</children></StackPane>
-</top>
+</HBox>
+   </top>
 </BorderPane>
