--- a/org.eclipse.rcpl.core/src/css/default_template.css
+++ b/org.eclipse.rcpl.core/src/css/default_template.css
@@ -1156,9 +1156,22 @@
     -fx-background-color: orange;
 }
 
+#grayBorder{
+	-fx-border-style: solid;
+	-fx-border-color: gray;
+	-fx-border-width: 1.0;
+}
+
+
 #redBorder{
 	-fx-border-style: solid;
 	-fx-border-color: red;
+	-fx-border-width: 1.0;
+}
+
+#blackBorder{
+	-fx-border-style: solid;
+	-fx-border-color: black;
 	-fx-border-width: 1.0;
 }
 
